public/less/main.less
.container {
  margin-top: 30px;
}

.NoMaxWidth {
  max-width: none;
}

.analyzeApiTableHeaderCell {
  max-width: none;
  padding: 7px 8px 8px;
}

.analyzeApiTableHeaderCellFixed {
  max-width: none;
  width: 15%;
  padding: 7px 8px 8px;
}

.analyzeApiTableRowCell {
  max-width: none;
  padding: 7px 8px 8px;
}

.analyzeApiTableRowCellShort {
  max-width: none;
  width: 10%;
  padding: 7px 8px 8px;
}

.analyzeApiTableRowCellTop {
  max-width: none;
  vertical-align: top;
}

.analyzeApiTableScroll {
  overflow-x: scroll;
  border: 1px solid #E4E4E4;
}

.analyzeApiTableScroll::-webkit-scrollbar{
  height: 0.5em;
  background-color: #F1F1F1;
}
.analyzeApiTableScroll::-webkit-scrollbar-thumb{
  background-color: #BCBCBC;
  border-radius: 12px;
  border-radius: 1.2rem;
}
.analyzeApiTableScroll::-webkit-scrollbar-thumb:hover{
  background-color: #A9A9AA;
}

.analyzeEven {
  > tbody > tr {
    background-color: #f9f9f9;
  }
}

.analyzeRequest {
  margin: 2px;
  border: 1px solid #E4E4E4;
  background-color: #F1F1F1;
  padding: 7px 8px 8px;
}

